Created attachment 59378 [details] An example After just upgrading to LO 3.5.1 I found that RTF files that imported fine earlier today is now completely messed up. These are files generated by Legacy Family Tree genealogoy software. They contain index tags on all names, which is now not imported at all. Many RTF docs also imports as mostly blank pages.
Confirmed (Windows XP, Vista 64). Works fine with LibO 3.4.5, does not work with LibO 3.5.2 => REGRESSION
Miklos Vajna committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=bec0bab00eeed78ccdb7065554dcf9e898f499fa fdo#48193 fix RTF import of fields without a result
Should be fixed in master now, marking as resolved. Added to my -3-5 cherry-pick request queue.
Oops, forgot to assign first.
Miklos Vajna committed a patch related to this issue. It has been pushed to "libreoffice-3-5": http://cgit.freedesktop.org/libreoffice/core/commit/?id=9b03e5c64482a4725459daa5ccc16fa686a3bffb&g=libreoffice-3-5 fdo#48193 fix RTF import of fields without a result It will be available in LibreOffice 3.5.4.
Tested with LOdev 3.6 (master - 18-May-2012 02h44 x86@6-fast; Build ID: 8b1d29b) under Windows Vista 64. It looks good, but line 3 "[ Fjern disse tre linjene. ]" on page one should be probably on the first page, not on the second. The section break is after that line.
Could someone please remove the attachment RTF file I posted? It turns out that its content is now indexed and easily found by Google, which is not good at all, because it contains personal/private data about living persons, which isn't legal to publish on the net. If I had known that it would be public like that I would never have posted that particular file! But now I can't find a way to delete/remove it.
Comment on attachment 59378 [details] An example Removed
Comment on attachment 59378 [details] An example Removed se tre linjene. ] >\par }
The content of attachment 59378 [details] has been deleted by Tollef Fog Heen <tfheen@err.no> who provided the following reason: Private The token used to delete this attachment was generated at 2012-09-02 19:25:22 UTC.
Migrating Whiteboard tags to Keywords: (filter:rtf) Replace rtf_filter -> filter:rtf. [NinjaEdit]