fdo#48193 fix RTF import of fields without a result